--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,12 +6,11 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-
-    <!-- Wie kriege ich das hier offline hin?-->
     <link
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!-- Gucken ob das im Cache landet-->
   </head>
   <body>
     <app-root></app-root>
