--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,6 +10,7 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <!-- Gucken ob das im Cache landet-->
   </head>
   <body>
