--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,11 +10,7 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script
-      src="https://accounts.google.com/gsi/client"
-      async=""
-      defer=""
-    ></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1976d2" />
   </head>
