--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,7 +12,7 @@
     />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <app-root></app-root>
