Fix manifest colors

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="icons/icon-128x128.png" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#f2f2f2" />
+    <meta name="theme-color" content="#fdfdfd" />
   </head>
   <body>
     <app-root></app-root>
