--- a/server/src/controller/training/index.html
+++ b/server/src/controller/training/index.html
@@ -4,220 +4,214 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Training Summary</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
     <style>
       body {
-        font-family: Arial, sans-serif;
-        background-color: #f5f5f5; /* Hellgrauer Hintergrund */
-        box-sizing: border-box;
-        width: 100%;
-        height: 100vh;
-        color: #333333; /* Dunkler Text */
-        padding: 3rem;
-        margin: 0;
+        font-family: 'Poppins', sans-serif;
+        background-color: #f5f5f5;
+        color: #333333;
+        padding: 20px;
       }
 
       .container {
-        padding: 20px;
-        background-color: #ffffff; /* Weißer Hintergrund */
-        border: 1px solid #e0e0e0; /* Leicht graue Umrandung */
+        background-color: #ffffff;
+        padding: 30px;
         border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Leichte Schatten für Tiefe */
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+        max-width: 800px;
+        margin: 0 auto;
       }
 
-      h1 {
-        text-align: center;
-        color: #4caf50; /* Grüner Akzent */
+      .headline-container {
+        margin-bottom: 0.5rem;
+      }
+
+      /* Stile für die Headlines */
+      .context-headline,
+      .headline {
+        font-size: 1.75rem;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+
+      .context-headline {
+        color: #adadad;
+      }
+
+      .headline {
+        margin-left: 0.375rem;
+        color: #333;
+      }
+
+      .time-data-container {
+        margin-bottom: 1.25rem;
+        color: #666;
+      }
+
+      .time-data-container p {
+        margin: 0;
+        margin-bottom: 0.3em;
       }
 
       .summary-table {
         width: 100%;
         border-collapse: collapse;
-        margin-bottom: 20px;
+        margin-bottom: 25px;
+        border-radius: 5px;
+        overflow: hidden;
       }
 
       .summary-table th,
       .summary-table td {
-        padding: 10px;
+        padding: 12px;
         text-align: left;
         border-bottom: 1px solid #e0e0e0;
       }
 
-      .summary-table .text-center {
-        text-align: center;
-      }
-
       .summary-table th {
-        background-color: #f0f0f0; /* Heller Hintergrund für die Kopfzeile */
-        color: #333333; /* Dunkler Text */
+        background-color: #f9f9f9;
+        color: #333;
+        font-size: 1rem;
       }
 
-      .chart-container {
+      .summary-table td {
+        background-color: #fefefe;
+        font-size: 0.95rem;
+      }
+
+      .summary-table tr:hover {
+        background-color: #f1f1f1;
+      }
+
+      .text-center {
+        text-align: center !important;
+      }
+
+      p {
+        color: #666666;
+        font-size: 1rem;
+      }
+
+      .total-tonnage {
+        background-color: #f0f8ff;
+        padding: 12px;
+        font-weight: bold;
+        font-size: 1.15rem;
+        color: #333;
+      }
+
+      .tonnage-chart {
+        display: block;
+        margin: 30px auto;
         width: 100%;
-        text-align: center;
-        margin: 20px 0;
+        max-width: 500px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
 
-      p,
-      td {
-        color: #666666; /* Etwas hellerer Text für Normaltext */
+      .footer {
+        text-align: center;
+        color: #999999;
+        font-size: 12px;
+        margin-top: 30px;
+      }
+
+      /* Styles für dezenteren Link */
+      .view-data-link {
+        display: inline-block;
+        font-size: 0.9rem;
+        color: #4caf50;
+        text-decoration: none;
+        margin-bottom: 20px;
+        border-bottom: 1px solid #4caf50;
+        padding-bottom: 4px;
+        font-weight: bold;
+      }
+
+      .view-data-link:hover {
+        color: #388e3c;
+        border-bottom-color: #388e3c;
+      }
+
+      .neutral-link {
+        color: #333;
+        font-size: 0.85rem;
+        text-decoration: none;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Training Summary</h1>
-      <p>Date: <strong id="trainingDate"></strong></p>
-      <p>Total Duration: <strong id="trainingDuration"></strong> minutes</p>
+      <!-- Link zur Anwendung oben -->
 
-      <table class="summary-table" id="exerciseTable">
+      <div class="headline-container">
+        <span>
+          <span class="context-headline">W2D3</span>
+          <span class="headline">Trainingsplan</span>
+        </span>
+      </div>
+
+      <div class="time-data-container">
+        <p>Donnerstag, 25. September 2024</p>
+        <p>Zeitraum: 17:45 - 19:00 (75 Minuten)</p>
+      </div>
+
+      <table class="summary-table">
         <thead>
           <tr>
             <th>Exercise</th>
             <th>Category</th>
-            <th>Sets</th>
-            <th>Reps</th>
-            <th>Weight</th>
-            <th>Target RPE</th>
-            <th>Actual RPE</th>
+            <th class="text-center">Sets</th>
+            <th class="text-center">Reps</th>
+            <th class="text-center">Weight</th>
+            <th class="text-center">Target RPE</th>
+            <th class="text-center">Actual RPE</th>
+            <th class="text-center">Est Max</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+          <tr>
+            <td>Bench Press</td>
+            <td>Strength</td>
+            <td class="text-center">4</td>
+            <td class="text-center">8</td>
+            <td class="text-center">80 kg</td>
+            <td class="text-center">7</td>
+            <td class="text-center">8</td>
+            <td class="text-center">95 kg</td>
+          </tr>
+          <tr>
+            <td>Squat</td>
+            <td>Strength</td>
+            <td class="text-center">5</td>
+            <td class="text-center">5</td>
+            <td class="text-center">120 kg</td>
+            <td class="text-center">8</td>
+            <td class="text-center">7.5</td>
+            <td class="text-center">150 kg</td>
+          </tr>
+          <tr>
+            <td>Deadlift</td>
+            <td>Strength</td>
+            <td class="text-center">3</td>
+            <td class="text-center">5</td>
+            <td class="text-center">140 kg</td>
+            <td class="text-center">9</td>
+            <td class="text-center">8.5</td>
+            <td class="text-center">160 kg</td>
+          </tr>
+        </tbody>
       </table>
 
-      <div class="chart-container">
-        <h2 style="color: #4caf50">Training Day Tonnage</h2>
-        <canvas id="tonnageChart" width="300" height="150"></canvas>
-        <p>Total Tonnage: <strong id="tonnage"></strong> kg</p>
-      </div>
+      <p class="total-tonnage">Total Tonnage: <strong>1,200</strong> kg</p>
 
-      <div class="chart-container">
-        <h2 style="color: #ff9800">Actual RPE Chart</h2>
-        <canvas id="rpeChart" width="300" height="150"></canvas>
-        <p>Average Actual RPE: <strong id="averageRPE"></strong></p>
-      </div>
+      <img src="https://via.placeholder.com/400x200?text=Tonnage+Chart" alt="Tonnage Chart" class="tonnage-chart" />
 
-      <p>
-        Notes: <br />
-        <span id="notes"></span>
-      </p>
+      <div class="footer">
+        <a class="neutral-link" href="https://trainingsystemsre.onrender.com/unsubscribe"
+          >Unsubscribe from Email Notifications</a
+        >
+      </div>
     </div>
-
-    <!-- Include Chart.js from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <script>
-      const trainingData = {
-        date: 'September 24, 2024',
-        durationInMinutes: 90,
-        tonnage: 24000,
-        averageRPE: 8,
-        notes: 'Felt good today, focused on form. Need to improve on deadlift form.',
-        exercises: [
-          {
-            exercise: 'Squat',
-            category: 'Strength',
-            sets: 4,
-            reps: 8,
-            weight: '100kg',
-            targetRPE: 8,
-            actualRPE: 7
-          },
-          {
-            exercise: 'Bench Press',
-            category: 'Strength',
-            sets: 3,
-            reps: 10,
-            weight: '75kg',
-            targetRPE: 8,
-            actualRPE: 8
-          },
-          {
-            exercise: 'Deadlift',
-            category: 'Strength',
-            sets: 3,
-            reps: 6,
-            weight: '120kg',
-            targetRPE: 9,
-            actualRPE: 9
-          }
-        ]
-      };
-
-      // Set basic data
-      document.getElementById('trainingDate').textContent = trainingData.date;
-      document.getElementById('trainingDuration').textContent = trainingData.durationInMinutes;
-      document.getElementById('tonnage').textContent = trainingData.tonnage.toLocaleString();
-      document.getElementById('averageRPE').textContent = trainingData.averageRPE;
-      document.getElementById('notes').textContent = trainingData.notes;
-
-      // Fill in the exercise table
-      const exerciseTableBody = document.querySelector('#exerciseTable tbody');
-      trainingData.exercises.forEach(exercise => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td class="text-center">${exercise.exercise}</td>
-          <td>${exercise.category}</td>
-          <td>${exercise.sets}</td>
-          <td>${exercise.reps}</td>
-          <td>${exercise.weight}</td>
-          <td>${exercise.targetRPE}</td>
-          <td>${exercise.actualRPE}</td>
-        `;
-        exerciseTableBody.appendChild(row);
-      });
-
-      // Generate Tonnage Chart using Chart.js
-      const tonnageData = [100, 70, 90]; // Example data
-      const tonnageChartCtx = document.getElementById('tonnageChart').getContext('2d');
-      new Chart(tonnageChartCtx, {
-        type: 'bar',
-        data: {
-          labels: ['Squat', 'Bench Press', 'Deadlift'],
-          datasets: [
-            {
-              label: 'Tonnage (kg)',
-              data: tonnageData,
-              backgroundColor: '#4caf50',
-              borderColor: '#388e3c',
-              borderWidth: 1
-            }
-          ]
-        },
-        options: {
-          scales: {
-            y: {
-              beginAtZero: true
-            }
-          }
-        }
-      });
-
-      // Generate RPE Chart using Chart.js
-      const rpeData = trainingData.exercises.map(ex => ex.actualRPE); // Extract RPE data
-      const rpeChartCtx = document.getElementById('rpeChart').getContext('2d');
-      new Chart(rpeChartCtx, {
-        type: 'bar',
-        data: {
-          labels: ['Squat', 'Bench Press', 'Deadlift'],
-          datasets: [
-            {
-              label: 'Actual RPE',
-              data: rpeData,
-              backgroundColor: '#ff9800',
-              borderColor: '#f57c00',
-              borderWidth: 1
-            }
-          ]
-        },
-        options: {
-          scales: {
-            y: {
-              beginAtZero: true,
-              max: 10
-            }
-          }
-        }
-      });
-    </script>
   </body>
 </html>
