--- a/server/src/controller/training/index.html
+++ b/server/src/controller/training/index.html
@@ -8,18 +8,14 @@
     <style>
       body {
         font-family: 'Poppins', sans-serif;
-        background-color: #f5f5f5;
+        background-color: #ffffff;
         color: #333333;
-        padding: 20px;
+        padding: 1.5em;
       }
 
       .container {
-        background-color: #ffffff;
-        padding: 30px;
         border-radius: 8px;
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
         max-width: 800px;
-        margin: 0 auto;
       }
 
       .headline-container {
