--- a/server/src/controller/training/index.html
+++ b/server/src/controller/training/index.html
@@ -22,7 +22,7 @@
         margin-bottom: 0.5rem;
       }
 
-      /* Stile für die Headlines */
+      /* Styles for the headlines */
       .context-headline,
       .headline {
         font-size: 1.75rem;
@@ -112,7 +112,7 @@
         margin-top: 30px;
       }
 
-      /* Styles für dezenteren Link */
+      /* Styles for subtle link */
       .view-data-link {
         display: inline-block;
         font-size: 0.9rem;
@@ -134,11 +134,56 @@
         font-size: 0.85rem;
         text-decoration: none;
       }
+
+      /* Responsive table with grid layout for smaller screens */
+      @media (max-width: 768px) {
+        .summary-table {
+          display: block;
+          border: none;
+        }
+
+        .summary-table thead {
+          display: none;
+        }
+
+        .summary-table tbody {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-row-gap: 15px;
+        }
+
+        .summary-table tr {
+          display: grid;
+          grid-template-columns: 1fr;
+          background-color: #fefefe;
+          padding: 10px;
+          border: 1px solid #e0e0e0;
+          border-radius: 5px;
+        }
+
+        .summary-table td::before {
+          content: attr(data-cell);
+          font-weight: bold;
+          text-transform: uppercase;
+          color: #666;
+          display: block;
+          margin-bottom: 5px;
+        }
+
+        .text-center {
+          text-align: left !important;
+        }
+
+        .summary-table td {
+          padding: 10px;
+          text-align: left;
+        }
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <!-- Link zur Anwendung oben -->
+      <!-- Link to the application at the top -->
 
       <div class="headline-container">
         <span>
@@ -167,34 +212,34 @@
         </thead>
         <tbody>
           <tr>
-            <td>Bench Press</td>
-            <td>Strength</td>
-            <td class="text-center">4</td>
-            <td class="text-center">8</td>
-            <td class="text-center">80 kg</td>
-            <td class="text-center">7</td>
-            <td class="text-center">8</td>
-            <td class="text-center">95 kg</td>
+            <td data-cell="Exercise">Bench Press</td>
+            <td data-cell="Category">Strength</td>
+            <td data-cell="Sets" class="text-center">4</td>
+            <td data-cell="Reps" class="text-center">8</td>
+            <td data-cell="Weight" class="text-center">80 kg</td>
+            <td data-cell="Target RPE" class="text-center">7</td>
+            <td data-cell="Actual RPE" class="text-center">8</td>
+            <td data-cell="Est Max" class="text-center">95 kg</td>
           </tr>
           <tr>
-            <td>Squat</td>
-            <td>Strength</td>
-            <td class="text-center">5</td>
-            <td class="text-center">5</td>
-            <td class="text-center">120 kg</td>
-            <td class="text-center">8</td>
-            <td class="text-center">7.5</td>
-            <td class="text-center">150 kg</td>
+            <td data-cell="Exercise"><strong>Exercise:</strong> Squat</td>
+            <td data-cell="Category">Strength</td>
+            <td data-cell="Sets" class="text-center">5</td>
+            <td data-cell="Reps" class="text-center">5</td>
+            <td data-cell="Weight" class="text-center">120 kg</td>
+            <td data-cell="Target RPE" class="text-center">8</td>
+            <td data-cell="Actual RPE" class="text-center">7.5</td>
+            <td data-cell="Est Max" class="text-center">150 kg</td>
           </tr>
           <tr>
-            <td>Deadlift</td>
-            <td>Strength</td>
-            <td class="text-center">3</td>
-            <td class="text-center">5</td>
-            <td class="text-center">140 kg</td>
-            <td class="text-center">9</td>
-            <td class="text-center">8.5</td>
-            <td class="text-center">160 kg</td>
+            <td data-cell="Exercise">Deadlift</td>
+            <td data-cell="Category">Strength</td>
+            <td data-cell="Sets" class="text-center">3</td>
+            <td data-cell="Reps" class="text-center">5</td>
+            <td data-cell="Weight" class="text-center">140 kg</td>
+            <td data-cell="Target RPE" class="text-center">9</td>
+            <td data-cell="Actual RPE" class="text-center">8.5</td>
+            <td data-cell="Est Max" class="text-center">160 kg</td>
           </tr>
         </tbody>
       </table>
